allow-business-tier-access-to-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restrict-access-to-business-tier-only
  namespace: products-prod
spec:
  podSelector:
    matchLabels:
      app: products-db
  ingress:
    #allows connection from pods with label "app=products-business" in the current namespace or
    #any namespace with the label "products-prod-db-access: allow"
  - from:
    - podSelector:
        matchLabels:
          app: products-business
      namespaceSelector:
        matchLabels:
          products-prod-db-access: allow
    ports:
      - protocol: TCP
        port: 8080
