restric-access-to-ui-tier-only.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restrict-access-to-ui-tier-only
  namespace: products-prod
spec:
  podSelector:
    matchLabels:
      app: products-business
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: products-ui
    ports:
      - protocol: TCP
        port: 8080
